Github live pages overflow fix v5
Padding toegevoegd aan .main cards & max-width: 100vw; aan .contact-2 p.

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,7 @@ h1 {
 h2 {
     font-size: 2em;
     text-align: center;
+    padding: .3em;
 }
 
 p, a {
@@ -526,4 +527,5 @@ footer {
 .contact-2 p {
   margin-top: -20px;
   margin-bottom: 0;
+  max-width: 100vw;
 }
